snapshots/parser/snapshots-outputs/loxide__parser__tests__comparison.snap
---
source: src/parser.rs
expression: asts
---
[
    Ok(
        Expr {
            kind: Binary(
                BinaryExpr {
                    lhs: Expr {
                        kind: Literal(
                            Number(
                                1.0,
                            ),
                        ),
                    },
                    rhs: Expr {
                        kind: Literal(
                            Number(
                                2.0,
                            ),
                        ),
                    },
                    operator: Less,
                },
            ),
        },
    ),
    Ok(
        Expr {
            kind: Binary(
                BinaryExpr {
                    lhs: Expr {
                        kind: Literal(
                            Number(
                                1.0,
                            ),
                        ),
                    },
                    rhs: Expr {
                        kind: Literal(
                            Number(
                                2.0,
                            ),
                        ),
                    },
                    operator: LessEqual,
                },
            ),
        },
    ),
    Ok(
        Expr {
            kind: Binary(
                BinaryExpr {
                    lhs: Expr {
                        kind: Literal(
                            Number(
                                1.0,
                            ),
                        ),
                    },
                    rhs: Expr {
                        kind: Literal(
                            Number(
                                2.0,
                            ),
                        ),
                    },
                    operator: Greater,
                },
            ),
        },
    ),
    Ok(
        Expr {
            kind: Binary(
                BinaryExpr {
                    lhs: Expr {
                        kind: Literal(
                            Number(
                                1.0,
                            ),
                        ),
                    },
                    rhs: Expr {
                        kind: Literal(
                            Number(
                                2.0,
                            ),
                        ),
                    },
                    operator: GreaterEqual,
                },
            ),
        },
    ),
]
